# test-ai-chat-project

./: .gitignore  README.md  auth_structure_refactor.md  backend_error_fix.md  chat_update_1.md  chat_update_2.md  frontend_error_fix.md  login_error.md  ollama_integration.md
backend/: pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  main.py
backend/app/ai_chat/: __init__.py  agent.py  config.py  main.py  steam_tools.py
backend/app/models/: __init__.py  chat.py  user.py
backend/app/routes/: auth.py  chat.py
backend/app/schemas/: __init__.py  chat.py  user.py
data_etl/LLM_RAG_DB_생성_RAG_테스트/: config.py  ingest_data.py  lightrag_engine-lightrag.py  main.py  rag_engine.py
data_etl/raw_data_split_mysql/: steam_data_save_JSON_mysql-github.ipynb  steam_data_save_정형_비정형_나누기-github.ipynb
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatInterface.tsx  ChatSidebar.tsx  LoginForm.tsx  MessageInput.tsx  MessageList.tsx  RegisterForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
